--- a/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
+++ b/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
@@ -103,9 +103,9 @@
         <button style="margin-left:10px;" class="mat-basic stepper-button" mat-raised-button (click)="goBack()">Back
         </button>
         <button [disabled]="startAdapterSettingsFormValid" mat-raised-button
-                id="button-saveTemplate" color="accent" (click)="saveTemplate()" mat-button
+                id="button-saveTemplate" color="accent" (click)="createAdapter()" mat-button
                 style="margin-left:10px;">
-            Save as Template
+            Create Adapter
         </button>
         <button [disabled]="startAdapterSettingsFormValid" mat-raised-button id="button-startAdapter"
                 color="accent" (click)="startAdapter()" mat-button style="margin-left:10px;">
