[STREAMPIPES-426] Add initial parts of authorization system

--- a/ui/src/app/configuration/security-configuration/edit-group-dialog/edit-group-dialog.component.html
+++ b/ui/src/app/configuration/security-configuration/edit-group-dialog/edit-group-dialog.component.html
@@ -31,9 +31,9 @@
                 </div>
                 <div fxLayout="column" class="general-options-panel">
                     <span class="general-options-header">Roles</span>
-                    <mat-checkbox *ngFor="let role of availableRoles" [value]="role"
-                                  [checked]="group.roles.indexOf(role) > -1" (change)="changeRoleAssignment($event)">
-                        {{role}}
+                    <mat-checkbox *ngFor="let role of availableRoles" [value]="role.role"
+                                  [checked]="group.roles.indexOf(role.role) > -1" (change)="changeRoleAssignment($event)">
+                        {{role.roleTitle}}
                     </mat-checkbox>
                 </div>
             </form>
