--- a/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.html
+++ b/ui/src/app/configuration/security-configuration/edit-user-dialog/edit-user-dialog.component.html
@@ -74,9 +74,9 @@
                 </div>
                 <div fxLayout="column" class="general-options-panel">
                     <span class="general-options-header">Roles</span>
-                <mat-checkbox *ngFor="let role of availableRoles" [value]="role"
-                              [checked]="user.roles.indexOf(role) > -1" (change)="changeRoleAssignment($event)">
-                    {{role}}
+                <mat-checkbox *ngFor="let role of availableRoles" [value]="role.role"
+                              [checked]="user.roles.indexOf(role.role) > -1" (change)="changeRoleAssignment($event)">
+                    {{role.roleTitle}}
                 </mat-checkbox>
                 </div>
                 <div fxLayout="column" class="general-options-panel">
