--- a/ui/src/app/app-asset-monitoring/components/create-asset/create-asset.component.html
+++ b/ui/src/app/app-asset-monitoring/components/create-asset/create-asset.component.html
@@ -18,19 +18,19 @@
 
 <div fxLayout="column" fxFlex="100" >
     <input type="file" (change)="handleFileInput($event)" accept="image/*" #file style="display:none;">
-    <div class="assemblyOptions sp-blue-bg">
-        <div layout="row" layout-align="start center">
-            <button mat-icon-button (click)="prepareDashboard()" type="submit" [disabled]="!backgroundImagePresent || !measurementPresent">
+    <div class="sp-tab-bg sp-blue-bg page-container-nav">
+        <div fxLayout="row" fxFlex="100" fxLayoutAlign="start center">
+            <button color="accent" mat-button mat-icon-button (click)="prepareDashboard()" type="submit" [disabled]="!backgroundImagePresent || !measurementPresent">
                 <i class="material-icons">save</i>
             </button>
-            <button mat-icon-button (click)="file.click()" type="submit" [disabled]="backgroundImagePresent">
+            <button color="accent" mat-button mat-icon-button (click)="file.click()" type="submit" [disabled]="backgroundImagePresent">
                 <i class="material-icons">file_upload</i>
             </button>
-            <button mat-icon-button (click)="openAddPipelineDialog()" >
+            <button color="accent" mat-button mat-icon-button (click)="openAddPipelineDialog()" >
                 <i class="material-icons">add</i>
             </button>
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-                <button mat-icon-button (click)="clearCanvas()" matTooltip="Clear">
+                <button color="accent" mat-button mat-icon-button (click)="clearCanvas()" matTooltip="Clear">
                     <i class="material-icons">
                         clear
                     </i>
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div id="outerAssemblyArea" class="sp-blue-border-nopadding asset-configuration-board-panel">
+    <div id="outerAssemblyArea" class="asset-configuration-board-panel">
         <div id="asset-configuration-board-canvas" class="asset-configuration-board-canvas" fxLayoutAlign="center center">
 
         </div>
