--- a/ui/src/app/app-asset-monitoring/components/dashboard-overview/dashboard-overview.component.html
+++ b/ui/src/app/app-asset-monitoring/components/dashboard-overview/dashboard-overview.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div fxFlex="100" fxLayout="column">
+<div fxFlex="100" fxLayout="column" class="page-container-padding-inner">
     <h1>Asset Dashboards</h1>
     <mat-grid-list
             [cols]="3" [rowHeight]="500"
@@ -35,8 +35,8 @@
                     </p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-button mat-raised-button color="primary" (click)="openDashboard(dashboardConfig)">Open Dashboard</button>
-                    <button mat-button mat-raised-button class="mat-basic"  (click)="deleteDashboard(dashboardConfig._id)">Delete</button>
+                    <button mat-button mat-raised-button color="accent" (click)="openDashboard(dashboardConfig)">Open Dashboard</button>
+                    <button mat-button mat-raised-button class="mat-basic"  (click)="deleteDashboard(dashboardConfig.dashboardId)">Delete</button>
                 </mat-card-actions>
             </mat-card>
         </mat-grid-tile>
