--- a/ui/src/app/app-asset-monitoring/components/view-asset/view-asset.component.html
+++ b/ui/src/app/app-asset-monitoring/components/view-asset/view-asset.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div fxFlex="100" fxLayout="column">
+<div fxFlex="100" fxLayout="column" class="page-container-padding-inner">
     <div fxLayout="row">
         <div fxLayout="fill">
             <h1>{{dashboardConfig.dashboardName}}</h1>
