--- a/ui/src/app/app-asset-monitoring/dialog/add-pipeline/add-pipeline-dialog.component.html
+++ b/ui/src/app/app-asset-monitoring/dialog/add-pipeline/add-pipeline-dialog.component.html
@@ -1,60 +1,51 @@
-    <!--
-  ~ Licensed to the Apache Software Foundation (ASF) under one or more
-  ~ contributor license agreements.  See the NOTICE file distributed with
-  ~ this work for additional information regarding copyright ownership.
-  ~ The ASF licenses this file to You under the Apache License, Version 2.0
-  ~ (the "License"); you may not use this file except in compliance with
-  ~ the License.  You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  ~
-  -->
+<!--
+~ Licensed to the Apache Software Foundation (ASF) under one or more
+~ contributor license agreements.  See the NOTICE file distributed with
+~ this work for additional information regarding copyright ownership.
+~ The ASF licenses this file to You under the Apache License, Version 2.0
+~ (the "License"); you may not use this file except in compliance with
+~ the License.  You may obtain a copy of the License at
+~
+~    http://www.apache.org/licenses/LICENSE-2.0
+~
+~ Unless required by applicable law or agreed to in writing, software
+~ distributed under the License is distributed on an "AS IS" BASIS,
+~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+~ See the License for the specific language governing permissions and
+~ limitations under the License.
+~
+-->
 
-<mat-toolbar>
-        <div class="md-toolbar-tools">
-            <h2>Add a new Widget</h2>
-            <span fxFlex></span>
-            <button mat-icon-button (click)="onCancel()">
-                <i class="material-icons">close</i>
-            </button>
-        </div>
-    </mat-toolbar>
-    <mat-divider></mat-divider>
-    <div mat-dialog-content class="md-dialog-content">
+<div class="sp-dialog-container">
+    <div class="sp-dialog-content p-15">
         <div fxFlex="100">
             <div fxFlex="100" style="margin:5px;width:100%">
                 <div *ngIf="page == 'select-pipeline'">
-                    <h4>{{pages[0].description}}</h4>
-                    <mat-grid-list
-                            [cols]="3" [rowHeight]="200"
-                            [gutterSize]="100">
-
-                        <mat-grid-tile class="gray" *ngFor="let opt of visualizablePipelines">
-                            <div [ngClass]="getSelectedPipelineCss(opt.doc)"
-                                 (click)="selectPipeline(opt.doc)">
-                                {{iconText(opt.doc.name)}}
-                                <h5>{{opt.doc.name}}</h5>
-                            </div>
-                        </mat-grid-tile>
-                    </mat-grid-list>
+                    <div *ngIf="page == 'select-pipeline'">
+                        <h4>{{pages[0].description}}</h4>
+                        <mat-list>
+                            <mat-list-item *ngFor="let pipeline of visualizablePipelines"
+                                           (click)="selectPipeline(pipeline)" class="list-item">
+                                <div mat-list-avatar
+                                     class="pipeline-avatar sp-accent-bg">{{iconText(pipeline.visualizationName)}}
+                                </div>
+                                <h4 mat-line>{{pipeline.pipelineName}}</h4>
+                                <p mat-line>{{pipeline.visualizationName}} </p>
+                            </mat-list-item>
+                        </mat-list>
+                    </div>
                 </div>
 
                 <!-- Select Type -->
                 <div *ngIf="page == 'select-measurement'" fxLayout="column">
                     <h4>{{pages[1].description}}</h4>
-                    <div fxFlex="100" layout="column">
+                    <div fxFlex="100" fxLayout="column">
                         <mat-radio-group fxLayout="column" class="example-radio-group"
                                          [(ngModel)]="selectedMeasurement">
                             <mat-radio-button class="example-radio-button"
                                               *ngFor="let prop of selectedVisualization.schema.eventProperties"
-                                              [value]="prop.properties.runtimeName">
-                                {{prop.properties.runtimeName}}
+                                              [value]="prop.runtimeName">
+                                {{prop.runtimeName}}
                             </mat-radio-button>
                         </mat-radio-group>
                     </div>
@@ -64,7 +55,7 @@
                 <div *ngIf="page == 'select-label'" fxLayout="column">
                     <b><h4>{{pages[2].description}}</h4></b>
                     <div fxFlex="100" fxLayout="column">
-                        <mat-form-field appearance="outline" style="margin-bottom: 10px;">
+                        <mat-form-field style="margin-bottom: 10px;" color="accent">
                             <mat-label>Label</mat-label>
                             <input matInput placeholder="Label" [(ngModel)]="selectedLabel" value="Label">
                             <mat-hint>Enter the label that will identify the measurement</mat-hint>
@@ -97,16 +88,18 @@
         </div>
     </div>
     <mat-divider></mat-divider>
-    <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
-        <button mat-button mat-raised-button class="mat-basic" (click)="onCancel()">
+    <div class="sp-dialog-actions">
+        <button mat-button mat-raised-button class="mat-basic mr-10" (click)="onCancel()">
             Cancel
         </button>
-        <button mat-button mat-raised-button class="mat-basic" (click)="back()" *ngIf="!('select-pipeline'===page)">
+        <button mat-button mat-raised-button class="mat-basic mr-10" (click)="back()" *ngIf="!('select-pipeline'===page)">
             Back
         </button>
-        <button mat-button mat-raised-button color="primary" (click)="next()">
+        <button mat-button mat-raised-button color="accent" (click)="next()">
             Next
         </button>
     </div>
+</div>
+
 
 
