--- a/ui/src/app/app-asset-monitoring/dialog/add-pipeline/add-pipeline-dialog.component.scss
+++ b/ui/src/app/app-asset-monitoring/dialog/add-pipeline/add-pipeline-dialog.component.scss
@@ -16,40 +16,37 @@
  *
  */
 
+@import '../../../../scss/sp/sp-dialog.scss';
+
 .element-margin {
     margin-top:10px;
     margin-bottom:10px;
 }
 
-mat-toolbar {
-    background: #39b54a;
+.mat-radio-button {
+    padding: 10px;
+}
+
+.mat-radio-button {
+    padding: 10px;
+}
+
+.pipeline-avatar {
+    align-items: center;
+    justify-content: center;
+    display: flex;
     color:white;
 }
 
-mat-dialog-content {
-    padding: 24px;
-    -webkit-box-ordinal-group: 2;
-    -webkit-order: 1;
-    order: 1;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
+.list-item:hover {
+    background: var(--color-bg-1);
+    cursor: pointer;
 }
 
-.mat-dialog-content {
-    width:100%;
-    height:74%;
-    margin: 10px 0px 0px;
+.list-item {
+    border-bottom: 1px solid #BDBDBD;
 }
 
-.mat-dialog-actions {
-    margin-bottom:0px;
-    padding-right:10px;
-}
-
-.dialog-margin-bottom {
-    margin-bottom: 10px;
+.mr-10 {
+    margin-right: 10px;
 }
