[hotfix] Remove padding from pipeline editor panel

--- a/ui/src/app/editor/editor.component.html
+++ b/ui/src/app/editor/editor.component.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100">
+    <div class="fixed-height" fxLayout="column" fxFlex="100">
         <div id="shepherd-test"
              style="padding:0px;border-bottom:1px solid #ffffff">
             <pipeline-element-icon-stand
