--- a/ui/src/app/app-asset-monitoring/dialog/save-dashboard/save-dashboard-dialog.component.html
+++ b/ui/src/app/app-asset-monitoring/dialog/save-dashboard/save-dashboard-dialog.component.html
@@ -41,7 +41,7 @@
             Cancel
         </button>
         <button mat-button mat-raised-button color="accent" (click)="save()">
-            Next
+            Save
         </button>
     </div>
 </div>
