--- a/ui/src/app/app-asset-monitoring/components/view-asset/view-asset.component.html
+++ b/ui/src/app/app-asset-monitoring/components/view-asset/view-asset.component.html
@@ -22,6 +22,7 @@
             <h1>{{dashboardConfig.dashboardName}}</h1>
         </div>
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
+            <button mat-button mat-raised-button color="accent" (click)="editDashboard()" class="mr-10">Edit dashboard</button>
             <button mat-button mat-raised-button class="mat-basic" (click)="closeDashboard()">Close dashboard</button>
         </div>
     </div>
