[STREAMPIPES-444] Improve link behaviour in asset dashboard

--- a/ui/src/app/app-asset-monitoring/dialog/add-link/add-link-dialog.component.html
+++ b/ui/src/app/app-asset-monitoring/dialog/add-link/add-link-dialog.component.html
@@ -31,6 +31,11 @@
                     <input matInput placeholder="Label" [(ngModel)]="linkHref">
                     <mat-hint>The target URL of the link</mat-hint>
                 </mat-form-field>
+                <mat-form-field color="accent">
+                    <mat-label>Font Size</mat-label>
+                    <input matInput placeholder="Label" [(ngModel)]="labelFontSize">
+                    <mat-hint>Font Size</mat-hint>
+                </mat-form-field>
                 <mat-checkbox [(ngModel)]="newWindow">Open in new window</mat-checkbox>
             </div>
 
