--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/field-selection-panel/field-selection-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/field-selection-panel/field-selection-panel.component.html
@@ -21,6 +21,7 @@
         <div fxLayout="row" fxLayoutAlign="start center">
             <button mat-button mat-raised-button color="accent" class="small-button"
                     style="margin-right:10px;"
+                    data-cy="data-explorer-data-set-field-select-all"
                     (click)="selectAllFields()">Select all
             </button>
             <button mat-button mat-raised-button class="small-button mat-basic"
