--- a/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
@@ -21,7 +21,10 @@
         <span class="data-explorer-header">Visualization Type</span>
         <mat-form-field color="accent" fxFlex="100">
             <mat-label>Select visualization</mat-label>
-            <mat-select [(value)]="currentlyConfiguredWidget.widgetType" (selectionChange)="triggerWidgetTypeChange($event)">
+            <mat-select
+                    [(value)]="currentlyConfiguredWidget.widgetType"
+                    (selectionChange)="triggerWidgetTypeChange($event)"
+                    data-cy="data-explorer-select-visualization-type">
                 <mat-option [value]="widget.id" *ngFor="let widget of availableWidgets">
                     <span class="pipeline-name">{{widget.label}}</span>
                 </mat-option>
