--- a/ui/src/app/data-explorer/components/time-selector/timeRangeSelector.component.html
+++ b/ui/src/app/data-explorer/components/time-selector/timeRangeSelector.component.html
@@ -18,17 +18,19 @@
 
 <div fxLayout="row" fxLayoutAlign="start center">
     <div class="time-range-wrapper" fxFlex fxLayoutAlign="center center">
-    <button mat-button mat-raised-button
-            *ngFor="let item of possibleTimeButtons"
-            [color]="selectedTimeButton.value === item.value ? 'accent' : ''"
-            class="button-margin smaller-button-font-size"
-            (click)="this.setCurrentDateRange(item)">{{item.value}}</button>
+        <button mat-button mat-raised-button
+                *ngFor="let item of possibleTimeButtons"
+                [color]="selectedTimeButton.value === item.value ? 'accent' : ''"
+                [attr.data-cy]="item.value.replace(' ', '_')"
+                class="button-margin smaller-button-font-size"
+                (click)="this.setCurrentDateRange(item)">{{item.value}}</button>
     </div>
     <div class="time-wrapper" fxFlex fxLayoutAlign="center center">
         <button mat-button class="button-icon icon-button-font-size mr--15" color="accent">
             <mat-icon (click)="decreaseTime()">navigate_before</mat-icon>
         </button>
-        <mat-form-field appearance="standard" class="start-date form-field-margin form-field-size-smaller" color="accent">
+        <mat-form-field appearance="standard" class="start-date form-field-margin form-field-size-smaller"
+                        color="accent">
             <mat-label>From</mat-label>
             <input matInput
                    [owlDateTime]="dt1"
