--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
@@ -38,7 +38,9 @@
                         [ngStyle]="{background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
                         <label class="column-header">Timestamp</label>
                     </th>
-                    <td mat-cell *matCellDef="let row" style="text-align: left;">
+                    <td mat-cell
+                        data-cy="data-explorer-table-row"
+                        *matCellDef="let row" style="text-align: left;">
                         {{row['time'] | date:'yyyy-MM-dd HH:mm:ss.SSS'}}
                     </td>
                 </div>
