--- a/ui/src/app/data-explorer/components/widgets/heatmap/config/heatmap-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/heatmap/config/heatmap-widget-config.component.html
@@ -16,11 +16,17 @@
   ~
   -->
 
-  <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" class="main-panel">
-    <div class="value-panel">
-      <div echarts [options]="option" [ngStyle]="{'width': '100%', 'height': currentHeight}"
-           (chartInit)="onChartInit($event)">
-      </div>
-  </div>
+<div fxFlex="100" fxLayout="column">
+  
+    <h5>Heat Value</h5>
+    <sp-select-property [availableProperties]="fieldProvider.numericFields"
+                        [selectedProperty]="currentlyConfiguredWidget.visualizationConfig.selectedHeatProperty"
+                        (changeSelectedProperty)="setSelectedHeatProperty($event)">
+    </sp-select-property>
+
+    <h5>Show labels</h5>
+    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.showLabelsProperty" (change)="setShowLabelsProperty($event)">show selected values
+    </mat-checkbox>
+
 </div>
 
