--- a/ui/src/app/core-ui/object-permission-dialog/object-permission-dialog.component.scss
+++ b/ui/src/app/core-ui/object-permission-dialog/object-permission-dialog.component.scss
@@ -15,24 +15,14 @@
  * limitations under the License.
  *
  */
-package org.apache.streampipes.rest.impl.admin;
 
-import org.apache.streampipes.model.client.user.Permission;
-import org.apache.streampipes.rest.core.base.impl.AbstractRestResource;
+@import '../../../scss/sp/sp-dialog.scss';
 
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import java.util.List;
-
-@Path("/v2/admin/permissions")
-public class PermissionResource extends AbstractRestResource {
-
-  @GET
-  @Path("{objectInstanceId}")
-  public List<Permission> getPermissionForObject(@PathParam("objectInstanceId") String objectInstanceId) {
-    return getSpResourceManager().managePermissions().findForObjectId(objectInstanceId);
-  }
+.form-field .mat-form-field-wrapper {
+  margin-bottom: -1.25em;
+}
 
 
+.form-field .mat-form-field-infix {
+  border-top: 0;
 }
