--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -22,18 +22,19 @@
             <th mat-header-cell mat-sort-header *matHeaderCellDef> Status</th>
             <td mat-cell *matCellDef="let pipeline">
                 <div fxLayout="row" fxLayoutAlign="start center">
-                <div *ngIf="pipeline.running && pipeline.healthStatus == 'OK'" class="light light-green"></div>
-                <div *ngIf="pipeline.running && pipeline.healthStatus == 'REQUIRES_ATTENTION'" class="light light-yellow"></div>
-                <div *ngIf="pipeline.running && pipeline.healthStatus == 'FAILURE'" class="light light-red"></div>
-                <div *ngIf="!pipeline.running" class="light light-neutral" [matTooltip]="'Stopped'"></div>
-                <button class="ml-10"
-                        mat-button
-                        mat-icon-button
-                        (click)="openPipelineNotificationsDialog(pipeline)"
-                        *ngIf="pipeline.pipelineNotifications.length > 0"
-                        matTooltip="{{pipeline.pipelineNotifications.length}} notification{{pipeline.pipelineNotifications.length > 1 ? 's' : ''}}">
-                    <mat-icon color="warn">warning</mat-icon>
-                </button>
+                    <div *ngIf="pipeline.running && pipeline.healthStatus == 'OK'" class="light light-green"></div>
+                    <div *ngIf="pipeline.running && pipeline.healthStatus == 'REQUIRES_ATTENTION'"
+                         class="light light-yellow"></div>
+                    <div *ngIf="pipeline.running && pipeline.healthStatus == 'FAILURE'" class="light light-red"></div>
+                    <div *ngIf="!pipeline.running" class="light light-neutral" [matTooltip]="'Stopped'"></div>
+                    <button class="ml-10"
+                            mat-button
+                            mat-icon-button
+                            (click)="openPipelineNotificationsDialog(pipeline)"
+                            *ngIf="pipeline.pipelineNotifications.length > 0"
+                            matTooltip="{{pipeline.pipelineNotifications.length}} notification{{pipeline.pipelineNotifications.length > 1 ? 's' : ''}}">
+                        <mat-icon color="warn">warning</mat-icon>
+                    </button>
                 </div>
             </td>
         </ng-container>
@@ -73,23 +74,34 @@
             <td mat-cell *matCellDef="let pipeline">
                 <div fxLayout="row">
                 <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">
-                    <button  color="accent" mat-button mat-icon-button matTooltip="Show pipeline" matTooltipPosition="above"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Show pipeline"
+                            matTooltipPosition="above"
                             (click)="pipelineOperationsService.showPipelineDetails(pipeline._id)"><i
                             class="material-icons">search</i>
                     </button>
                 </span>
                     <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">
-                    <button color="accent" mat-button mat-icon-button matTooltip="Modify pipeline" matTooltipPosition="above"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Modify pipeline"
+                            matTooltipPosition="above"
                             [disabled]="pipeline.running"
                             (click)="pipelineOperationsService.modifyPipeline(pipeline._id)">
                         <i class="material-icons">mode_edit</i>
                     </button>
                 </span>
                     <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
-                    <button color="accent" mat-button mat-icon-button matTooltip="Delete pipeline" matTooltipPosition="above"
+                    <button color="accent" mat-button mat-icon-button matTooltip="Delete pipeline"
+                            matTooltipPosition="above"
                             (click)="pipelineOperationsService.showDeleteDialog(pipeline, refreshPipelinesEmitter)"
-                            data-cy="delete" >
+                            data-cy="delete">
                         <i class="material-icons">delete</i>
+                    </button>
+                </span>
+                    <span fxFlex fxFlexOrder="4" fxLayout="row" fxLayoutAlign="center center" *ngIf="isAdmin">
+                    <button color="accent" mat-button mat-icon-button matTooltip="Permissions"
+                            matTooltipPosition="above"
+                            (click)="pipelineOperationsService.showPermissionsDialog(pipeline, refreshPipelinesEmitter)"
+                            data-cy="delete">
+                        <i class="material-icons">share</i>
                     </button>
                 </span>
                 </div>
