[STREAMPIPES-450] Display bolean values in data-explorer line charts

--- a/ui/src/app/data-explorer/components/widgets/line-chart/config/line-chart-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/config/line-chart-widget-config.component.html
@@ -31,7 +31,7 @@
         label="Select Properties"
         multiple=true
         (changeSelectedProperties)="setSelectedProperties($event)"
-        [availableProperties]="fieldProvider.numericFields"
+        [availableProperties]="fieldProvider.numericFields.concat(fieldProvider.booleanFields)"
         [selectedProperties]="currentlyConfiguredWidget.visualizationConfig.selectedLineChartProperties"
         [currentlyConfiguredWidget]="currentlyConfiguredWidget">
 
